--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-polyfills": "0.0.1",
-		"react-router": "^6.0.2"
+		"react-query": "^3.39.3",
+		"react-router": "^6.0.2",
+		"zustand": "^4.5.4"
 	}
 }
